--- a/3layer_cms/Data Access Layer/Data Access Layer.csproj
+++ b/3layer_cms/Data Access Layer/Data Access Layer.csproj
@@ -40,6 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ConferenceDA.cs" />
     <Compile Include="DashboardDA.cs" />
     <Compile Include="LoginDA.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
