--- a/3layer_cms/bussinessLogic/bussinessLogic.csproj
+++ b/3layer_cms/bussinessLogic/bussinessLogic.csproj
@@ -39,6 +39,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ConferenceBL.cs" />
     <Compile Include="DashboardBL.cs" />
     <Compile Include="LoginBL.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
